Added Readme file

--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -56,7 +56,12 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Abdulmuiz Ige</a>.
+        >. Coded by
+        <a
+          href="https://www.linkedin.com/in/abdulmuiz-ige-01987a235?utm_source=share&utm_campaign=share_via&utm_cont"
+          target="_blank"
+          >Abdulmuiz Ige</a
+        >.
       </div>
     </footer>
   </body>
